export JAVA_OPTS
Signed-off-by: Daithi Coombes <webeire@gmail.com>